fixup! console: Add doclink to wizard

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -15,6 +15,7 @@
   "components.file-input.index.remove": "Remove",
   "components.footer.index.footer": "You are the network. Let's build this thing together.",
   "components.footer.index.getSupport": "Get support",
+  "components.form.field.index.glossaryLinkTitle": "Click here for an explanation of this field",
   "components.form.section.index.expand": "Expand section",
   "components.form.section.index.collapse": "Collapse section",
   "components.input.generate.generate": "Generate",
@@ -521,7 +522,6 @@
   "lib.shared-messages.general": "General",
   "lib.shared-messages.generalInformation": "General information",
   "lib.shared-messages.generalSettings": "General settings",
-  "lib.shared-messages.glossaryLinkTitle": "Click here for an explanation of this field",
   "lib.shared-messages.hardware": "Hardware",
   "lib.shared-messages.hardwareVersion": "Hardware version",
   "lib.shared-messages.homeNetID": "Home NetID",
