--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -15,6 +15,7 @@
   "components.file-input.index.remove": "Xxxxxx",
   "components.footer.index.footer": "Xxx xxx xxx xxxxxxx. Xxx'x xxxxx xxxx xxxxx xxxxxxxx.",
   "components.footer.index.getSupport": "Xxx xxxxxxx",
+  "components.form.field.index.glossaryLinkTitle": "Xxxxx xxxx xxx xx xxxxxxxxxxx xx xxxx xxxxx",
   "components.form.section.index.expand": "Xxxxxx xxxxxxx",
   "components.form.section.index.collapse": "Xxxxxxxx xxxxxxx",
   "components.input.generate.generate": "Xxxxxxxx",
@@ -521,7 +522,6 @@
   "lib.shared-messages.general": "Xxxxxxx",
   "lib.shared-messages.generalInformation": "Xxxxxxx xxxxxxxxxxx",
   "lib.shared-messages.generalSettings": "Xxxxxxx xxxxxxxx",
-  "lib.shared-messages.glossaryLinkTitle": "Xxxxx xxxx xxx xx xxxxxxxxxxx xx xxxx xxxxx",
   "lib.shared-messages.hardware": "Xxxxxxxx",
   "lib.shared-messages.hardwareVersion": "Xxxxxxxx xxxxxxx",
   "lib.shared-messages.homeNetID": "Xxxx XxxXX",
